manifests/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: my-backend-service
spec:
  type: ClusterIP
  selector:
    app: python-flask-app
  ports:
  - port: 80
    targetPort: 5000
