manifests/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: flask-app
