manifests/promgraf.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - grafana.davidcloud.site
      secretName: grafana-tls
  rules:
    - host: grafana.davidcloud.site  # Replace with your desired domain for Prometheus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana # Your existing Prometheus service name
                port:
                  number: 80  # Port for Prometheus
