manifests/proming.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.davidcloud.site
      secretName: prometheus-tls
  rules:
    - host: prometheus.davidcloud.site  # Replace with your desired domain for Prometheus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus  # Your existing Prometheus service name
                port:
                  number: 9090  # Port for Prometheus
